# 36cube

./: analysis.ipynb  pyproject.toml
data/: heights.csv
tests/: test_36cube.py
